# ansible-role-plugins

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml  pytest.yml  release.yml
filter_plugins/: custom.py  custom_filters.py
meta/: main.yml
test/: test_plugins.py
test_plugins/: custom_tests.py
