[tool.poetry]
name = "nephelaiio.plugins"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0.1"
Jinja2 = "^3.0.3"
netaddr = "^0.8.0"
MarkupSafe = "^2.0.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
