[tool.poetry]
name = "nephelaiio.plugins"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
netaddr = "^0.9.0"
pyyaml = "^6.0.1"
jinja2 = "^3.1.2"
markupsafe = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
